--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>This is some random text.</p>
+    <p>This is some random text 2.</p>
+  </body>
 </html>
