--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Header for the thing!</h1>
     <p>This is some random text.</p>
     <p>This is some random text 2.</p>
+    <h3>Not so much a header</h3>
   </body>
 </html>
